--- a/style.css
+++ b/style.css
@@ -203,9 +203,8 @@ input[type=checkbox]:checked ~ #overlay-button span:after {
 
 #my-skills {
   height: 100vh;
-  background-image: url();
+  background-image: url(./img/raychan-e_J7i3eQEfo-unsplash.jpg);
   background-repeat: no-repeat;
-  opacity: 0.7;
   background-size: cover;
   display: -ms-grid;
   display: grid;
@@ -213,7 +212,7 @@ input[type=checkbox]:checked ~ #overlay-button span:after {
       grid-template-columns: 32px auto;
   -ms-grid-rows: (auto)[7];
       grid-template-rows: repeat(7, auto);
-  color: white;
+  color: black;
   font-size: 32px;
   padding-left: 10px;
 }
