--- a/style.scss
+++ b/style.scss
@@ -162,15 +162,14 @@ background-size: cover;
 }
 #my-skills{
     height: 100vh;
-    background-image: url();
+    background-image: url(./img/raychan-e_J7i3eQEfo-unsplash.jpg);
     background-repeat: no-repeat;
-    opacity: 0.7;
+   
     background-size: cover;
-    
     display: grid;
     grid-template-columns: 32px auto;
     grid-template-rows: repeat(7,auto);
-    color: white;
+    color: black;
     font-size: 32px;
     padding-left: 10px;
     div {
