--- a/style.scss
+++ b/style.scss
@@ -150,6 +150,7 @@ body {
     color: white;
 
 }
+
 #about{
 height: 100vh;
 display: flex;
@@ -185,7 +186,7 @@ background-size: cover;
 
 }
 #my-skills{
-    height: 100vh;
+    height: 110vh;
     background-image: url(./img/raychan-e_J7i3eQEfo-unsplash.jpg);
     background-repeat: no-repeat;
    
@@ -250,7 +251,7 @@ background-size: cover;
 }
 
 #my-projects {
-  height: 100vh;
+  height: 170vh;
   font-size: 2em;
   background-color: rgb(185, 153, 153);
   .cards{
@@ -332,6 +333,43 @@ background-size: cover;
  
 }
 
+#contact{
+  
+  h2{
+    font-size: 2em;
+  }
+  form{
+    width: 70%;
+    padding: 10px;
+  
+  input[type=text],input[type=email], select, textarea {
+    width:100% ; 
+    padding: 12px;  
+    border: 1px solid #ccc; 
+    border-radius: 4px; 
+    margin-top: 6px; 
+    margin-bottom: 16px;
+    resize: vertical 
+  }
+  input[type=submit] {
+    background-color: #04AA6D;
+    color: white;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    &:hover {
+    background-color: #45a049;
+  }
+  
+}
+.contact-form {
+  border-radius: 5px;
+  background-color: #f2f2f2;
+  padding: 20px;
+   }
+  }
+}
 
 
 
@@ -342,23 +380,21 @@ background-size: cover;
 
     main{
       max-width: 1200px;
-      margin: 0 auto;
+      margin: 0 0 0 400px;
+      
     }
-     #overlay-button {
-        
-          visibility: hidden;   
+     #overlay-button, {
+       
+          visibility: hidden;  
+      
       }
     #overlay {
         visibility: visible;
-        height: 50px;
+        width: 180px;
+        height: 100%;
+        z-index: 1;
         
-        ul{
-            display: flex;
-            flex-direction: row;
-            justify-content: space-between;
-           
-
-        }
+       
     }
     #about{
        flex-direction: row;
@@ -376,6 +412,7 @@ background-size: cover;
 
     }
     #my-projects{
+      height: 100vh;
       .cards{
         flex-direction: row;
       .card{
