--- a/style.css
+++ b/style.css
@@ -18,7 +18,6 @@ body {
 
 *::-webkit-scrollbar-thumb {
   background: transparent;
-  border: none;
 }
 
 nav {
@@ -448,7 +447,19 @@ input[type=checkbox]:checked ~ #overlay-button span:after {
 @media (min-width: 767px) {
   main {
     max-width: 1200px;
-    margin: 0 0 0 400px;
+    margin: 0 auto;
+  }
+  *::-webkit-scrollbar {
+    width: 16px;
+  }
+  *::-webkit-scrollbar-track {
+    background: #e98d8d;
+    border-radius: 20px;
+  }
+  *::-webkit-scrollbar-thumb {
+    background: -webkit-gradient(linear, left top, left bottom, from(black), color-stop(white), to(black));
+    background: linear-gradient(to bottom, black, white, black);
+    border-radius: 25px;
   }
   #overlay-button {
     visibility: hidden;
