--- a/style.scss
+++ b/style.scss
@@ -251,6 +251,7 @@ background-size: cover;
   justify-content: space-evenly;
   align-items: center;
   flex-direction: column;
+  padding-left: 20px;
 
 
   .card {
@@ -268,6 +269,7 @@ background-size: cover;
  }
  &:hover {
   box-shadow: 15px 8px 16px 0 rgba(0,0,0,0.2);
+  transform: scale(1.1);
  } 
  .project-info{
    position: relative;
@@ -326,7 +328,7 @@ background-size: cover;
 }
 
 #contact{
-  
+  padding-left:20px ;
   h2{
     font-size: 2em;
   }
@@ -362,6 +364,34 @@ background-size: cover;
    }
   }
 }
+footer {
+  background-color: black;
+  width: 100%;
+  display: flex;
+  justify-content: space-evenly;
+  height: 200px;
+ ul {
+display: flex;
+
+
+
+  
+  li {
+color: #ffffff;
+margin: 10px;
+font-size: 32px;
+list-style-type:none;
+
+  
+ 
+
+i{color: white;
+  &:hover{
+     transform: scale(1.4);
+     }}
+   } 
+ }
+}
 
 
 
@@ -391,7 +421,9 @@ background-size: cover;
      #overlay-button, {
        
           visibility: hidden;  
-      
+      span{
+        display: none;
+      }
       }
     #overlay {
         visibility: visible;
@@ -428,4 +460,5 @@ background-size: cover;
       
     }
   }
+
 }
