--- a/style.css
+++ b/style.css
@@ -452,37 +452,190 @@ input[type=checkbox]:checked ~ #overlay-button span:after {
 }
 
 footer {
-  background-color: black;
+  background: #666;
+  -webkit-box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
+          box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   width: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: space-evenly;
-      -ms-flex-pack: space-evenly;
-          justify-content: space-evenly;
-  height: 200px;
+  text-align: left;
+  font: bold 16px sans-serif;
+  padding: 55px 50px;
 }
 
-footer ul {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-
-footer ul li {
+footer h3 {
   color: #ffffff;
-  margin: 10px;
-  font-size: 32px;
-  list-style-type: none;
+  font: normal 36px 'Open Sans', cursive;
+  margin: 0;
 }
 
-footer ul li i {
-  color: white;
+footer h3 span {
+  color: lightseagreen;
 }
 
-footer ul li i:hover {
+footer .footer-about {
+  line-height: 20px;
+  color: #92999f;
+  font-size: 13px;
+  font-weight: normal;
+  margin: 0;
+}
+
+footer .footer-about span {
+  display: block;
+  color: #ffffff;
+  font-size: 14px;
+  font-weight: bold;
+  margin-bottom: 20px;
+}
+
+footer .footer-left {
+  display: inline-block;
+  vertical-align: top;
+  width: 40%;
+}
+
+footer .footer-left .footer-links {
+  color: #ffffff;
+  margin: 20px 0 12px;
+  padding: 0;
+}
+
+footer .footer-left .footer-links a {
+  display: inline-block;
+  line-height: 1.8;
+  font-weight: 400;
+  text-decoration: none;
+  color: inherit;
+}
+
+footer .footer-left .footer-links a:before {
+  content: "|";
+  font-weight: 300;
+  font-size: 20px;
+  left: 0;
+  color: #fff;
+  display: inline-block;
+  padding-right: 5px;
+}
+
+footer .footer-left .footer-links .link-1:before {
+  content: none;
+}
+
+footer .footer-left .footer-name {
+  color: #222;
+  font-size: 14px;
+  font-weight: normal;
+  margin: 0;
+}
+
+footer .footer-center {
+  display: inline-block;
+  vertical-align: top;
+  width: 35%;
+}
+
+footer .footer-center i {
+  background-color: #33383b;
+  color: #ffffff;
+  font-size: 25px;
+  width: 38px;
+  height: 38px;
+  border-radius: 50%;
+  text-align: center;
+  line-height: 42px;
+  margin: 10px 15px;
+  vertical-align: middle;
+}
+
+footer .footer-center i:hover {
   -webkit-transform: scale(1.4);
           transform: scale(1.4);
+}
+
+footer .footer-center .fa-envelope {
+  font-size: 17px;
+  line-height: 38px;
+}
+
+footer .footer-center p {
+  display: inline-block;
+  color: #ffffff;
+  font-weight: 400;
+  vertical-align: middle;
+  margin: 0;
+}
+
+footer .footer-center p span {
+  display: block;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 2;
+}
+
+footer .footer-center p a {
+  color: lightseagreen;
+  text-decoration: none;
+}
+
+footer .footer-right {
+  display: inline-block;
+  vertical-align: top;
+  width: 20%;
+}
+
+footer .footer-right .footer-icons {
+  margin-top: 25px;
+}
+
+footer .footer-right .footer-icons a {
+  display: inline-block;
+  width: 35px;
+  height: 35px;
+  cursor: pointer;
+  background-color: #4d5b64;
+  border-radius: 2px;
+  font-size: 20px;
+  color: #ffffff;
+  text-align: center;
+  line-height: 35px;
+  margin-right: 3px;
+  margin-bottom: 5px;
+}
+
+footer .footer-right .footer-icons a:hover {
+  -webkit-transform: scale(1.4);
+          transform: scale(1.4);
+}
+
+@media (max-width: 767px) {
+  footer {
+    font: bold 16px sans-serif;
+  }
+  footer .footer-center {
+    width: auto;
+  }
+  footer .footer-left,
+  footer,
+  footer .footer-right {
+    display: block;
+    width: 100%;
+    margin-bottom: 40px;
+    text-align: center;
+  }
+  footer .footer-center p {
+    width: 100%;
+  }
+  footer .footer-center i {
+    margin-left: 0;
+    color: white;
+    font-size: 24px;
+  }
+  footer .footer-center i:hover {
+    -webkit-transform: scale(1.4);
+            transform: scale(1.4);
+  }
 }
 
 @media (min-width: 767px) {
